name:                base
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     GHC.TopHandler
  build-depends:       ghc-prim
  default-language:    Haskell2010
  ghc-options: -this-unit-id base
