name:                integer-gmp
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     GHC.Integer.Type
  build-depends:       ghc-prim
  default-language:    Haskell2010

  -- We need to set the unit ID as it's magic.
  ghc-options: -this-unit-id integer-gmp

